# CV_Ricoh

./: CMakeLists.txt  README.md
include/: H264Decoder.h  thetauvc.h
include/libuvc/: libuvc.h
src/: H264Decoder.cpp  ricoh_opencv.cpp  test.c  thetauvc.c
